--- a/FrontEnd/src/styles/Form.css
+++ b/FrontEnd/src/styles/Form.css
@@ -1,5 +1,5 @@
 .form-wrapper {
   background: url('../assets/noel.gif') no-repeat center center / cover;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
