--- a/FrontEnd/src/styles/ButtonForm.css
+++ b/FrontEnd/src/styles/ButtonForm.css
@@ -8,7 +8,7 @@
   line-height: 1.5;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 200px;
   font-size: 20px;
   font-weight: bold !important;
 }
