fix giao dien admin

--- a/FrontEnd/src/app/(manage)/admin-products/components/TableData/styled.scss
+++ b/FrontEnd/src/app/(manage)/admin-products/components/TableData/styled.scss
@@ -18,3 +18,6 @@
 :where(.css-dev-only-do-not-override-amq5gd).ant-btn-primary {
   background-color: #1677ff !important;
 }
+:where(.css-dev-only-do-not-override-19gw05y).ant-btn-primary {
+  background-color: #1677ff !important;
+}
