customer reviews page

--- a/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
+++ b/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
@@ -27,7 +27,9 @@
   --boder-number: #c62323b5;
   --bcg-add-hover: #bc1313dd;
   --bcg-buy: #c73d3d77;
-  --overview-title-color: #333333da
+  --overview-title-color: #333333da;
+  --proportional-area: #cac6c673;
+  --like-hover: rgb(67, 158, 67);
 }
 
 * {
@@ -48,7 +50,7 @@
 }
 
 *::selection {
-  background-color: var(--bcg-detail-color);
+  background-color: var(--bcg-add);
   color: var(--white);
 }
 
@@ -74,9 +76,10 @@ html {
   scroll-padding-top: 65px;
 }
 
-body{
+body {
   background-color: var(--white);
 }
+
 /*detail-wrapper  */
 .detail-wrapper {
   display: grid;
@@ -214,7 +217,6 @@ body{
 }
 
 .content-detail .product-information .product-reviews .icon-star {
-  margin-right: 3px;
   color: var(--star-color);
   font-size: 16px;
 }
@@ -270,12 +272,9 @@ body{
 
 .content-detail .product-information .orther-information .dev-link {
   color: var(--black);
+  cursor: default;
 }
 
-.content-detail .product-information .orther-information .dev-link:hover {
-  color: var(--hover-color);
-  transition: all 0.2s linear;
-}
 
 /*      <!-- Start product-purchase-table area --> */
 
@@ -506,12 +505,9 @@ body{
   color: var(--black);
   font-family: 'Roboto', sans-serif;
   font-weight: 150;
+  cursor: default;
 }
 
-.product-content .footer-content .footer-detail .item-value a:hover {
-  color: var(--bcg-add-hover);
-  transition: all 0.2s linear;
-}
 
 /*    <!-- End footer content area --> */
 
@@ -659,12 +655,9 @@ body{
 .specification-wrapper .overview .overview-content .platform-value a,
 .specification-wrapper .overview .overview-content .overview-developer .developer-value a {
   color: var(--black);
+  cursor: default;
 }
 
-.specification-wrapper .overview .overview-content .platform-value a:hover,
-.specification-wrapper .overview .overview-content .overview-developer .developer-value a:hover {
-  color: var(--hover-color);
-}
 
 .specification-wrapper .value {
   color: var(--fontcolor);
@@ -690,11 +683,12 @@ body{
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 100px 100px;
-  gap: 25px;
+  gap: 25px 5px;
+  overflow: hidden;
 
 }
 
-.discounted-wrapper .discounted-content .discounted-items:not(.item-content) {
+.discounted-wrapper .discounted-content .discounted-items {
   display: grid;
   width: 324px;
   grid-template-columns: 23% 70%;
@@ -721,9 +715,22 @@ body{
   font-size: 16px;
   margin-left: 10px;
   color: var(--black);
+  overflow: hidden;
 }
 
-.discounted-wrapper .discounted-content .discounted-items .item-content .item-name span {
+/* .discounted-wrapper .discounted-content .discounted-items .item-content .item-name {
+  width: 152px;
+  overflow: hidden;
+  white-space: nowrap;
+} */
+
+.discounted-wrapper .discounted-content .discounted-items .item-content .item-name a span {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
   font-size: 17px;
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
@@ -736,10 +743,14 @@ body{
 
 }
 
+
+
 .discounted-wrapper .discounted-content .discounted-items .item-content .item-review .icon-star {
-  font-size: small;
+  font-size: 15px;
   color: var(--star-color);
 }
+
+
 
 .discounted-wrapper .discounted-content .discounted-items .item-content .item-price span {
   color: var(--bcg-add-hover);
@@ -751,32 +762,305 @@ body{
 /* <!-- End discount area --> */
 
 
+/* <!-- Start Customer Reviews --> */
+.customerReviews-wrapper {
+  display: grid;
+  grid-template-rows: 4% 62% 34%;
+  margin: 80px 20px;
+  background-color: var(--bcg-detail-color);
+  border-radius: 5px;
+  padding: 20px;
+  height: 1200px;
+}
 
 
+.customerReviews-wrapper .total {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.customerReviews-wrapper .total .total-Rating .rating-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.customerReviews-wrapper .total .total-Rating .ratingHeader-number {
+  font-size: 60px;
+  font-weight: bolder;
+  height: 70px;
+}
+
+.customerReviews-wrapper .total .total-Rating .ratingHeader-star i {
+  color: var(--star-color);
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+.customerReviews-wrapper .total .total-Rating .ratingHeader-reviews {
+  margin-top: 5px;
+  font-size: 15px;
+  color: var(--fontcolor);
+  font-weight: bolder;
+}
 
 
+.customerReviews-wrapper .total .total-Rating .rating-main {
+  margin-top: 20px;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .rating-items {
+  display: grid;
+  grid-template-columns: 93px 74% 3%;
+  gap: 0 8px;
+  place-items: center;
+  margin-top: 8px;
+  overflow: hidden;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .rating-items .stars-area {
+  height: 21px;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .rating-items .stars-area i {
+  color: var(--star-color);
+  margin-right: 0px;
+  font-size: 16px;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .wrapper-proportional-area {
+  height: 10px;
+  width: 100%;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .rating-five .wrapper-proportional-area .proportional-area {
+  border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  background-color: var(--bcg-add);
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .rating-five .quantity-area span {
+  font-size: 17px;
+  font-weight: bolder;
+  color: #191717;
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .wrapper-proportional-area .proportional-area {
+  border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  background-color: var(--proportional-area);
+}
 
+.customerReviews-wrapper .total .total-Rating .rating-main .quantity-area span {
+  font-size: 17px;
+  font-weight: bolder;
+  color: var(--fontcolor);
+}
 
+.customerReviews-wrapper .total .review-form-wrapper {
+  height: 100%;
+  margin: 0 40px;
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-title {
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form {
+  margin-top: 35px;
+  color: var(--black);
+  font-weight: bolder;
+  font-size: 16px;
+  display: grid;
+  gap: 20px 0;
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .comment-notes .notes {
+  color: var(--fontcolor);
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .require {
+  color: var(--bcg-add);
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .comment-form-rating .stars {
+  margin-left: 10px;
+  font-size: 17px;
+  color: var(--icon-down);
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .comment-form-comment,
+.comment-form-author,
+.comment-form-email {
+  display: grid;
+  grid-column: inherit;
+  gap: 10px 0;
+}
 
+input[type='email'],
+input[type='text'],
+textarea {
+  max-width: 100%;
+  width: 100%;
+  border: var(--icon-down) solid 1px;
+  border-radius: 35px;
+  background-color: var(--white);
+  box-shadow: none;
+  color: var(--fontcolor);
+  vertical-align: middle;
+  font-size: 15px;
+}
 
+textarea {
+  padding: 20px;
+}
 
+input[type='email'],
+input[type='text'] {
+  height: 42px;
+  padding: 20px;
+}
 
+input[type='checkbox'] {
+  background-color: var(--bcg-buy);
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .comment-form-consent {
+  display: flex;
+  gap: 0 8px;
+  align-items: center;
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .form-submit .submit {
+  padding: 5px 20px;
+  min-height: 42px;
+  border-radius: 35px;
+  background-color: var(--boder-number);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
 
+.customerReviews-wrapper .total .review-form-wrapper .review-form .form-submit .submit:hover {
+  background-color: var(--bcg-add-hover);
+}
+
+.customerReviews-wrapper .comments-area {
+  margin-top: 20px;
+}
+
+.customerReviews-wrapper .comments-area .reviews-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.customerReviews-wrapper .comments-area .reviews-heading .default {
+  width: 100px;
+  padding: 8px 15px;
+  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.605);
+  border: #979494 solid 1px;
+  font-size: 14px;
+  color: #979494;
+}
+
+.customerReviews-wrapper .comments-area .review-box {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 49% 49%;
+  overflow: hidden;
+  margin-top: 25px;
+  gap: 0 18px;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card {
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  border: #979494c0 solid 1px;
+  border-radius: 10px;
+  padding: 20px;
+  position: relative;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile {
+  display: flex;
+  align-items: center;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile .profile-image {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 5px 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile .profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile .profile-name {
+  margin-left: 20px;
+  line-height: 22px;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile .profile-name .likes i {
+  margin-top: 10px;
+  color: var(--star-color);
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-top .profile .comment-date {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  margin: 15px;
+  font-size: 18px;
+  color: var(--fontcolor);
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-main p {
+  margin-top: 10px;
+  color: var(--fontcolor);
+  font-size: 16px;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-footer {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0 15px;
+  font-size: 18px;
+  color: var(--fontcolor);
+  cursor: pointer;
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-footer .like:hover {
+  color: var(--like-hover);
+}
+
+.customerReviews-wrapper .comments-area .review-box .review-card .card-footer .unlike:hover {
+  color: var(--bcg-add);
+}
 
 
 
@@ -853,16 +1137,12 @@ body{
     font-weight: 700;
   }
 
-  .discounted-wrapper .discounted-content .discounted-items .item-content .item-name a {
-    font-size: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    color: var(--overview-title-color);
-    transition: all 0.2s linear;
-    white-space: nowrap;
-    word-break: break-word;
-    overflow: hidden;
 
+  .discounted-wrapper .discounted-content .discounted-items {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 74px 65%;
+    overflow: hidden;
   }
 
 }
@@ -964,6 +1244,36 @@ body{
     overflow: hidden;
   }
 
+  .customerReviews-wrapper {
+    display: grid;
+    grid-template-rows: 1fr;
+    margin: 80px 20px;
+    background-color: var(--bcg-detail-color);
+    border-radius: 5px;
+    padding: 20px;
+    height: auto;
+  }
+
+  .customerReviews-wrapper .total {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 25px 0;
+  }
+
+  .customerReviews-wrapper .total .review-form-wrapper {
+    height: auto;
+    margin: 0;
+  }
+
+  .customerReviews-wrapper .comments-area .review-box {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    overflow: hidden;
+    margin-top: 25px;
+    gap: 18px 0;
+  }
+
 }
 
 
@@ -1012,6 +1322,12 @@ body{
     overflow: hidden;
   }
 
+  .specification-wrapper .overview {
+    margin: 30px 0;
+    height: 380px;
+    border-bottom: var(--line-color) outset 2px;
+  }
+
   .description-wrapper .description-detail .main-actors:not(.actors-label) {
     margin-top: 20px;
     display: grid;
@@ -1044,4 +1360,11 @@ body{
 
 
 @media(max-width: 450px) {
+
+  .description-wrapper .description-detail .story-summary .story-summary-img {
+    width: 350px;
+    margin-bottom: 15px;
+    border: var(--black) solid 1px;
+    border-radius: 30px;
+  }
 }
