edit book , detail book

--- a/FrontEnd/src/components/SelectInput/styled.scss
+++ b/FrontEnd/src/components/SelectInput/styled.scss
@@ -1,5 +1,5 @@
 :where(.css-dev-only-do-not-override-pr0fja).ant-select-single {
-  min-height: 45.33px;
+  height: 45.33px;
 }
 :where(
     .css-dev-only-do-not-override-pr0fja
