--- a/FrontEnd/src/styles/BookItem.scss
+++ b/FrontEnd/src/styles/BookItem.scss
@@ -1,7 +1,14 @@
 .book-item {
   overflow: hidden;
-  &:hover img {
-    transform: scale(1.2);
-    transition: all 0.3s linear;
-  }
+}
+
+.book-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease-in-out;
+}
+
+.book-item img:hover {
+  transform: scale(1.2);
 }
