--- a/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
+++ b/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
@@ -560,11 +560,9 @@ body {
 /* <!-- Start Description area --> */
 .description-wrapper {
   margin: 0px 20px;
+  padding: 30px;
   background-color: var(--bcg-description-color);
-}
-
-.description-wrapper h1 {
-  margin-top: 70px;
+  border-radius: 8px;
 }
 
 .directory-name h1 {
@@ -572,10 +570,6 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 350;
   color: var(--black);
-}
-
-.description-wrapper h1 {
-  margin-top: 70px;
 }
 
 .description-wrapper .description-slider {
