--- a/FrontEnd/src/app/globals.css
+++ b/FrontEnd/src/app/globals.css
@@ -4,32 +4,21 @@
 
 @layer base {
   body {
-    background-color: #f0f0f0;
+    background-color: #f0f0f0 !important;
   }
   .wrapper-content {
     max-width: 1340px;
     margin: 0 auto;
     padding: 0 20px;
   }
-  .category-list .swiper-wrapper .swiper-slide {
-    width: 200px !important;
-    height: 150px !important;
-  }
-  .category-list .swiper .swiper-pagination {
-    transform: translateY(12px);
+  .book-list .swiper,
+  .category-list .swiper {
+    height: 100%;
   }
   .button-next,
   .button-prev {
     position: relative;
     z-index: 20;
-  }
-  .book-list .swiper-wrapper .swiper-slide {
-    width: 200px !important;
-    height: 150px !important;
-  }
-  .book-list .swiper,
-  .category-list .swiper {
-    height: 100%;
   }
   .book-list .swiper .swiper-pagination {
     transform: translateY(12px);
