--- a/FrontEnd/src/styles/CategoryItem.scss
+++ b/FrontEnd/src/styles/CategoryItem.scss
@@ -1,5 +1,15 @@
 .category-item {
+  position: relative;
   overflow: hidden;
+  &::before {
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 1000;
+  }
   &:hover img {
     transform: scale(1.2);
     transition: all 0.3s linear;
