--- a/FrontEnd/src/app/globals.css
+++ b/FrontEnd/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    background-color: #f0f0f0 !important;
+    background-color: #f0f0f0;
   }
   .wrapper-content {
     max-width: 1340px;
