--- a/FrontEnd/src/styles/Pagination.scss
+++ b/FrontEnd/src/styles/Pagination.scss
@@ -7,13 +7,18 @@
     height: 30px;
     border: 1px solid gray;
     border-radius: 4px;
+    transition: all 0.3s ease;
     a {
       font-weight: 500;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding-top: 1px;
+      padding-top: 2px;
     }
+  }
+  li:hover {
+    background-color: #6d4eec;
+    color: white;
   }
   li.selected {
     background-color: #6d4eec;
