--- a/FrontEnd/src/app/globals.css
+++ b/FrontEnd/src/app/globals.css
@@ -11,25 +11,15 @@
     margin: 0 auto;
     padding: 0 20px;
   }
-  .category-list .swiper-wrapper .swiper-slide {
-    width: 200px !important;
-    height: 150px !important;
-  }
-  .category-list .swiper .swiper-pagination {
-    transform: translateY(12px);
+  .book-list .swiper,
+  .category-list .swiper,
+  .list-comment .swiper {
+    height: 100%;
   }
   .button-next,
   .button-prev {
     position: relative;
     z-index: 20;
-  }
-  .book-list .swiper-wrapper .swiper-slide {
-    width: 200px !important;
-    height: 150px !important;
-  }
-  .book-list .swiper,
-  .category-list .swiper {
-    height: 100%;
   }
   .book-list .swiper .swiper-pagination {
     transform: translateY(12px);
