--- a/FrontEnd/src/styles/SwiperButton.scss
+++ b/FrontEnd/src/styles/SwiperButton.scss
@@ -10,7 +10,7 @@
   margin-top: 80px;
 }
 .swiper-button-prev {
-  margin: 80px 0 0 1190px;
+  margin: 80px 0 0 1110px !important;
 }
 .swiper-button-next::after,
 .swiper-button-prev::after {
