--- a/FrontEnd/src/app/(default)/(private)/cart/styled.scss
+++ b/FrontEnd/src/app/(default)/(private)/cart/styled.scss
@@ -356,3 +356,9 @@ li {
 input[type='radio'] {
   margin-left: 8px;
 }
+
+:where(.css-dev-only-do-not-override-19gw05y).ant-btn-primary {
+  color: #fff;
+  background-color: #1677ff !important;
+  box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
+}
