--- a/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
+++ b/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
@@ -53,20 +53,20 @@
   color: var(--white);
 }
 
-::-webkit-scrollbar {
-  height: 1px;
-  width: 10px;
-  border-radius: 50%;
-}
+// ::-webkit-scrollbar {
+//   height: 1px;
+//   width: 10px;
+//   border-radius: 50%;
+// }
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
+// ::-webkit-scrollbar-track {
+//   background-color: transparent;
+// }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--icon-down);
-  border-radius: 20px;
-}
+// ::-webkit-scrollbar-thumb {
+//   background-color: var(--icon-down);
+//   border-radius: 20px;
+// }
 
 html {
   /* font-size: 62.5%; */
