--- a/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
+++ b/FrontEnd/src/app/(default)/(public)/product/style/styled.scss
@@ -70,9 +70,9 @@
 
 html {
   /* font-size: 62.5%; */
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  scroll-padding-top: 65px;
+  // overflow-x: hidden;
+  // scroll-behavior: smooth;
+  // scroll-padding-top: 65px;
 }
 
 body {
